--- a/file6.html
+++ b/file6.html
@@ -4,19 +4,51 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Email Signature - Namita Pawa</title>
+
+<style>
+@media only screen and (max-width: 400px) {
+  table[class="main-table"] {
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+  td[class="header-left"],
+  td[class="header-right"] {
+    display: block !important;
+    width: 100% !important;
+    text-align: center !important;
+  }
+  td[class="header-right"] img {
+    margin: 10px auto !important;
+  }
+  img[class="responsive-img"] {
+    max-width: 200px !important;
+    height: auto !important;
+  }
+  table[class="award-table"] td[class="award-col"] {
+    display: block !important;
+    width: 100% !important;
+    padding: 10px 0 !important;
+    text-align: center !important;
+  }
+  td, a, div {
+    word-break: break-word !important;
+  }
+}
+</style>
 </head>
+
 <body style="font-family: Arial, Helvetica, sans-serif;">
 
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:600px; background-color:#fff; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+<table border="0" cellpadding="0" cellspacing="0" class="main-table" style="width:100%; max-width:600px; background-color:#fff; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
 
-  <!-- Header: Name + Title + Logo -->
+  <!-- Header -->
   <tr>
-    <td style="width:75%; vertical-align:middle; color:#233e6f;">
+    <td class="header-left" style="width:75%; vertical-align:middle; color:#233e6f;">
       <div style="font-size:20px; font-weight:bold;">Namita Pawa</div>
       <div style="font-size:15px; color:#233e6f; margin-top:2px;">Partner</div>
     </td>
-    <td style="text-align:right; vertical-align:middle; padding: 10px; border-radius: 10px;">
-      <img src="https://i.ibb.co/39cvG5N7/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="150" style="display:block;">
+    <td class="header-right" style="text-align:right; vertical-align:middle; padding:10px;">
+      <img src="https://i.ibb.co/39cvG5N7/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="150" class="responsive-img" style="display:block;">
     </td>
   </tr>
 
@@ -27,7 +59,7 @@
     </td>
   </tr>
 
-  <!-- Contact Info (smaller font + smaller icons) -->
+  <!-- Contact Info -->
   <tr>
     <td colspan="2" style="padding-top:5px;">
       <table border="0" cellpadding="5" cellspacing="0" style="font-size:14px; color:#233e6f; width:100%;">
@@ -40,7 +72,7 @@
           <td>
             <strong>Office:</strong> 
             <a href="tel:02078288253" style="color:#233e6f; text-decoration:none;">0207 828 8253</a>
-            &nbsp; | &nbsp;
+           &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp;
             <strong>Emergency:</strong> 
             <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
           </td>
@@ -113,29 +145,29 @@
     </td>
   </tr>
 
-  <!-- Award Logos (3 columns, one Chambers logo only) -->
+  <!-- Award Logos -->
   <tr>
     <td colspan="2" style="padding-top:10px; border-top:1px solid #e8cf6e;">
-      <table width="100%" cellpadding="0" cellspacing="0" style="text-align:center;">
+      <table width="100%" cellpadding="0" cellspacing="0" class="award-table" style="text-align:center;">
         <tr>
-          <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/dwXWLt0K/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" style="width:100%; display:block; margin:0 auto;">
+          <td class="award-col" style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/dwXWLt0K/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
-           <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/zWs8ZGV4/Pawa-Namita-4.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
+          <td class="award-col" style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/zWs8ZGV4/Pawa-Namita-4.jpg" alt="Chambers - Namita Pawa" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
-          <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/tTW6xrxG/Firm-Logo-1.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
+          <td class="award-col" style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/tTW6xrxG/Firm-Logo-1.jpg" alt="Chambers & Partners" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
-          <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/23hSz89W/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" style="width:100%; display:block; margin:0 auto;">
+          <td class="award-col" style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/23hSz89W/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
         </tr>
       </table>
     </td>
   </tr>
 
-  <!-- Disclaimer moved BELOW logos -->
+  <!-- Disclaimer -->
   <tr>
     <td colspan="2" style="padding-top:15px; font-size:12px; color:#233e6f; line-height:20px;">
       HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. 
