--- a/file6.html
+++ b/file6.html
@@ -48,7 +48,7 @@
       <div style="font-size:15px; color:#233e6f; margin-top:2px;">Partner</div>
     </td>
     <td class="header-right" style="text-align:right; vertical-align:middle; padding:10px;">
-      <img src="https://i.ibb.co/39cvG5N7/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="150" class="responsive-img" style="display:block;">
+      <img src="https://i.postimg.cc/kGMjbLBR/Hallinans-logo-Blue.jpg" alt="Hallinans Logo" width="150" class="responsive-img" style="display:block;">
     </td>
   </tr>
 
@@ -67,7 +67,7 @@
         <!-- Office + Emergency -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/QFBbB5KZ/Frame-1.png" alt="Phone" width="22">
+            <img src="https://iili.io/Kpjc65N.png" alt="Phone" width="22">
           </td>
           <td>
             <strong>Office:</strong> 
@@ -81,7 +81,7 @@
         <!-- Mobile -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/HTK9ytYV/Frame-14.png" alt="Mobile" width="22">
+            <img src="https://iili.io/KpjS4MG.png" alt="Mobile" width="22">
           </td>
           <td>
             <strong>Mobile:</strong> 
@@ -92,7 +92,7 @@
         <!-- Website -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/xSKyyTzm/Frame-11.png" alt="Website" width="22">
+            <img src="https://iili.io/KpjGkKu.png" alt="Website" width="22">
           </td>
           <td>
             <strong>Website:</strong> 
@@ -103,7 +103,7 @@
         <!-- Emails -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/C3zV7RZs/Group-3-1.png" alt="Email" width="22">
+            <img src="https://iili.io/Kpj55js.png" alt="Email" width="22">
           </td>
           <td>
             <strong>Email:</strong> 
@@ -116,7 +116,7 @@
         <!-- Address -->
         <tr>
           <td width="28" valign="top">
-            <img src="https://i.ibb.co/pjDJk0CQ/Frame-19.png" alt="Address" width="22">
+            <img src="https://iili.io/Kpj1xx1.png" alt="Address" width="22">
           </td>
           <td>
             <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" 
@@ -134,13 +134,13 @@
   <tr>
     <td colspan="2" style="padding:15px 15px 25px; ">
       <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/k667NDmz/Frame-12.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://iili.io/KpjWCnS.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/QFY5Kx3R/Frame-15.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://iili.io/KpjjoPI.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/p6mtMHj5/Frame-16.png" alt="Instagram" width="26" style="vertical-align:middle;">
+        <img src="https://iili.io/KpjwbEB.png" alt="Instagram" width="26" style="vertical-align:middle;">
       </a>
     </td>
   </tr>
@@ -151,16 +151,16 @@
       <table width="100%" cellpadding="0" cellspacing="0" class="award-table" style="text-align:center;">
         <tr>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/dwXWLt0K/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/KpjDpku.jpg" alt="The Times" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/zWs8ZGV4/Pawa-Namita-4.jpg" alt="Chambers - Namita Pawa" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/KpjpNXj.jpg" alt="Chambers - Namita Pawa" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/tTW6xrxG/Firm-Logo-1.jpg" alt="Chambers & Partners" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/Kpw98R1.jpg" alt="Chambers & Partners" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/23hSz89W/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/KpwJNyP.webp" alt="Legal 500" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
           </td>
         </tr>
       </table>
@@ -170,14 +170,7 @@
   <!-- Disclaimer -->
   <tr>
     <td colspan="2" style="padding-top:15px; font-size:12px; color:#233e6f; line-height:20px;">
-      HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. 
-      Registered Office: Alexandra House, 55A Catherine Place, London, SW1E 6DY. 
-      Authorised and regulated by the SRA under number 833036.
-      <br><br>
-      This transmission is intended only for the addressee and may concern confidential or privileged information. 
-      If you are not the intended recipient, you may not copy, disseminate or distribute its content. 
-      Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' websites. 
-      Any legal liability is limited to the lay client for whom it was prepared. 
+      This transmission is intended only for the addressee and may concern confidential information or information which is privileged from disclosure. If this transmission is not addressed to you (either for your own use or for forwarding to the intended recipient), then you may not copy, disseminate or distribute its content. Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' internal databases or Intranets. Any legal liability in respect of this e-mail and any attachment is limited to the lay client for whom it was prepared and to the particular case concerned. Any unauthorised use of such a document is a breach of copyright.
       <br><br>
       <span style="color:#7A9A01;">Please consider the impact on the environment before printing this e-mail.</span>
     </td>
