--- a/file6.html
+++ b/file6.html
@@ -72,7 +72,7 @@
           <td>
             <strong>Office:</strong> 
             <a href="tel:02078288253" style="color:#233e6f; text-decoration:none;">0207 828 8253</a>
-           &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp;
+            &nbsp; | &nbsp; 
             <strong>Emergency:</strong> 
             <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
           </td>
@@ -170,7 +170,11 @@
   <!-- Disclaimer -->
   <tr>
     <td colspan="2" style="padding-top:15px; font-size:12px; color:#233e6f; line-height:20px;">
-      This transmission is intended only for the addressee and may concern confidential information or information which is privileged from disclosure. If this transmission is not addressed to you (either for your own use or for forwarding to the intended recipient), then you may not copy, disseminate or distribute its content. Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' internal databases or Intranets. Any legal liability in respect of this e-mail and any attachment is limited to the lay client for whom it was prepared and to the particular case concerned. Any unauthorised use of such a document is a breach of copyright.
+      HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. 
+      Registered Office: Alexandra House, 55A Catherine Place, London, SW1E 6DY. 
+      Authorised and regulated by the SRA under number 833036.
+      <br><br>
+      This transmission is intended only for the addressee and may concern confidential information or information which is privileged from disclosure. If this transmission is not addressed to you (either for your own use or for forwarding to the intended recipient), then you may not copy, disseminate or distribute its content. Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' internal databases or Intranets. Any legal liability in respect of this e-mail and any attachment is limited to the lay client for whom it was prepared and to the particular case concerned. Any unauthorised use of such a document is a breach of copyright. 
       <br><br>
       <span style="color:#7A9A01;">Please consider the impact on the environment before printing this e-mail.</span>
     </td>
