--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </td>
     <td class="header-right" style="text-align:right; vertical-align:middle; padding-right:15px;">
-      <img src="https://i.postimg.cc/kGMjbLBR/Hallinans-logo-Blue.jpg" alt="Hallinans Logo" width="160" class="responsive-img" style="display:block;">
+      <img src="https://iili.io/Kpj4sse.jpg" alt="Hallinans Logo" width="160" class="responsive-img" style="display:block;">
     </td>
   </tr>
 
@@ -139,19 +139,19 @@
           <img src="https://iili.io/KpjDpku.jpg" 
                alt="The Times Award" 
                class="responsive-img" 
-               style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+               style="width:160px; height:auto; display:block; margin:0 auto;">
         </td>
         <td class="award-col" style="width:33.3%; padding:10px;">
           <img src="https://iili.io/Kpw98R1.jpg" 
                alt="Chambers Award" 
                class="responsive-img" 
-               style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+               style="width:160px; height:auto; display:block; margin:0 auto;">
         </td>
         <td class="award-col" style="width:33.3%; padding:10px;">
           <img src="https://iili.io/KpwJNyP.webp" 
                alt="Legal 500 Award" 
                class="responsive-img" 
-               style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+               style="width:160px; height:auto; display:block; margin:0 auto;">
         </td>
       </tr>
     </table>
