--- a/file6.html
+++ b/file6.html
@@ -48,7 +48,7 @@
       <div style="font-size:15px; color:#233e6f; margin-top:2px;">Partner</div>
     </td>
     <td class="header-right" style="text-align:right; vertical-align:middle; padding:10px;">
-      <img src="https://i.postimg.cc/kGMjbLBR/Hallinans-logo-Blue.jpg" alt="Hallinans Logo" width="150" class="responsive-img" style="display:block;">
+      <img src="https://iili.io/Kpj4sse.jpg" alt="Hallinans Logo" width="150" class="responsive-img" style="display:block;">
     </td>
   </tr>
 
@@ -151,16 +151,16 @@
       <table width="100%" cellpadding="0" cellspacing="0" class="award-table" style="text-align:center;">
         <tr>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://iili.io/KpjDpku.jpg" alt="The Times" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/KpjDpku.jpg" alt="The Times" class="responsive-img" style="width:160px; height:auto; display:block; margin:0 auto;">
           </td>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://iili.io/KpjpNXj.jpg" alt="Chambers - Namita Pawa" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/KpjpNXj.jpg" alt="Chambers - Namita Pawa" class="responsive-img" style="width:160px; height:auto; display:block; margin:0 auto;">
           </td>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://iili.io/Kpw98R1.jpg" alt="Chambers & Partners" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/Kpw98R1.jpg" alt="Chambers & Partners" class="responsive-img" style="width:160px; height:auto; display:block; margin:0 auto;">
           </td>
           <td class="award-col" style="width:25%; padding:10px;">
-            <img src="https://iili.io/KpwJNyP.webp" alt="Legal 500" class="responsive-img" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+            <img src="https://iili.io/KpwJNyP.webp" alt="Legal 500" class="responsive-img" style="width:160px; height:auto; display:block; margin:0 auto;">
           </td>
         </tr>
       </table>
