--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Divider -->
   <tr>
     <td colspan="2" style="padding:10px 0;">
-      <hr style="border:none; border-top:1px solid #e8cf6e; margin:0;">
+      <hr style="border:none; margin:0;">
     </td>
   </tr>
 
@@ -132,7 +132,7 @@
 
  <!-- Award Logos -->
 <tr>
-  <td colspan="2" style="padding-top:10px; border-top:1px solid #e8cf6e;">
+  <td colspan="2" style="padding-top:10px;">
     <table width="100%" cellpadding="0" cellspacing="0" class="award-table" style="text-align:center;">
       <tr>
         <td class="award-col" style="width:33.3%; padding:10px;">
