--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Email Signature - Namita Pawa</title>
+<title>Email Signature2 - Namita Pawa</title>
 
 <style>
 @media only screen and (max-width: 400px) {
@@ -39,7 +39,7 @@
 
 <body style="font-family: Arial, Helvetica, sans-serif;">
 
-<table border="0" cellpadding="0" cellspacing="0" class="main-table" style="width:100%; max-width:760px !important; background-color:#fff; margin:40px; padding:25px; border-radius:20px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+<table border="0" cellpadding="0" cellspacing="0" class="main-table" style="width:100%; max-width:600px; background-color:#fff; margin:40px auto; padding:20px; border-radius:20px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
 
   <!-- Header -->
   <tr>
@@ -48,7 +48,7 @@
       <div style="font-size:15px; color:#233e6f; margin-top:2px;">Partner</div>
     </td>
     <td class="header-right" style="text-align:right; vertical-align:middle; padding:10px;">
-      <img src="https://iili.io/fJQvTNe.png" alt="Hallinans Logo" width="160" class="responsive-img" style="display:block;">
+      <img src="https://iili.io/Kpj4sse.jpg" alt="Hallinans Logo" width="150" class="responsive-img" style="display:block;">
     </td>
   </tr>
 
@@ -66,10 +66,10 @@
           <!-- Office + Emergency -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://iili.io/fJLj02n.png" alt="Phone" width="22">
+            <img src="https://iili.io/Kpjc65N.png" alt="Phone" width="22">
           </td>
           <td>
-            <strong>Office:</strong> 
+            <!-- <strong>Office:</strong>  -->
             <a href="tel:02078288253" style="color:#233e6f; text-decoration:none;">0207 828 8253</a>
            
           </td>
@@ -77,13 +77,13 @@
     <!-- Mobile -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://iili.io/fJL4buS.png" alt="Mobile" width="22">
+            <img src="https://iili.io/KpjS4MG.png" alt="Mobile" width="22">
           </td>
           <td>
-            <strong>Mobile:</strong> 
+            <!-- <strong>Mobile:</strong>  -->
             <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
              &nbsp; | &nbsp; 
-            <strong>Emergency:</strong> 
+            <!-- <strong>Emergency:</strong>  -->
             <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
           </td>
         </tr>
@@ -93,10 +93,10 @@
         <!-- Emails -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://iili.io/fJLLKqF.png" alt="Email" width="22">
+            <img src="https://iili.io/Kpj55js.png" alt="Email" width="22">
           </td>
           <td>
-            <strong>Email:</strong> 
+            <!-- <strong>Email:</strong>  -->
             <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#233e6f; text-decoration:none;">namita.pawa@hallinans.co.uk</a>
             &nbsp; | &nbsp;
             <a href="mailto:namita.pawa@cjsm.net" style="color:#233e6f; text-decoration:none;">namita.pawa@cjsm.net</a>
@@ -105,10 +105,10 @@
          <!-- Website -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://iili.io/fJLQrt2.png" alt="Website" width="22">
+            <img src="https://iili.io/KpjGkKu.png" alt="Website" width="22">
           </td>
           <td>
-            <strong>Website:</strong> 
+            <!-- <strong>Website:</strong>  -->
             <a href="https://www.hallinans.co.uk" target="_blank" style="color:#233e6f; text-decoration:none;">www.hallinans.co.uk</a>
           </td>
         </tr>
@@ -116,7 +116,7 @@
         <!-- Address -->
         <tr>
           <td width="28" valign="top">
-            <img src="https://iili.io/fJQ3kss.png" alt="Address" width="22">
+            <img src="https://iili.io/Kpj1xx1.png" alt="Address" width="22">
           </td>
           <td>
             <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" 
@@ -134,13 +134,13 @@
   <tr>
     <td colspan="2" style="padding:15px 15px 25px; ">
       <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" target="_blank" style="text-decoration:none;">
-        <img src="https://iili.io/fJQCfJj.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://iili.io/KpjWCnS.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" target="_blank" style="text-decoration:none;">
-        <img src="https://iili.io/fJQnZu4.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://iili.io/KpjjoPI.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" target="_blank" style="text-decoration:none;">
-        <img src="https://iili.io/fJQxzsS.png" alt="Instagram" width="26" style="vertical-align:middle;">
+        <img src="https://iili.io/KpjwbEB.png" alt="Instagram" width="26" style="vertical-align:middle;">
       </a>
     </td>
   </tr>
